interpreter/parser/syntax.ypp
%code requires
{
  #include "../abstract-syntax-tree/Node.hpp"
  #include "../abstract-syntax-tree/Import.hpp"
  #include "../abstract-syntax-tree/Path.hpp"
}

%{
  #include <cstdio>
  #include <iostream>
  using namespace std;

  #define YYSTYPE class ASTNode *

  extern int yylex();
  extern int yyparse();
  extern FILE *yyin;
  extern int linenum;

  void yyerror(const char *s);
%}

%token <fval> NUMBER
%token <sval> PATH
%token <sval> IDENTIFIER
%token MAP "->"
%token BTRUE "True"
%token BFALSE "False"
%token IMPORT "import"
%left '>' '<'
%left AND OR EQUALS LEQUALS GEQUALS NEQUALS
%token NOT "not"
%left '+' '-'
%left '*' '/'
%precedence NEG
%right '^'

%type <nptr> import

%%

zolon:
  import
  | binding
  | expression

import:
  "import" PATH                                    {}
  ;

binding:
  IDENTIFIER '=' expression
  ;

expression:
  NUMBER
  | boolean
  | function
  | function-application
  | expression '+' expression
  | expression '-' expression
  | expression '*' expression
  | expression '/' expression
  | expression '>' expression
  | expression '<' expression
  | expression AND expression
  | expression OR expression
  | expression EQUALS expression
  | expression GEQUALS expression
  | expression LEQUALS expression
  | expression NEQUALS expression
  | "not" expression %prec NEG
  | '-' expression  %prec NEG
  | expression '^' expression
  | '(' expression ')'
  ;

boolean:
  "True"
  | "False"
  ;

function:
  parameter-list "->" '{' function-body '}'
  ;

function-body:
  expression
  | '|' subdomain-list expression
  ;

subdomain-list:
  expression ':' expression '|'
  | subdomain-list expression ':' expression '|'
  ;

parameter-list:
  parameter
  | parameter-list parameter
  ;

parameter:
  '\\' IDENTIFIER
  ;

function-application:
  IDENTIFIER '(' expression-list ')'
  | IDENTIFIER
  ;

expression-list:
  %empty
  | expression
  | expression-list ',' expression
  ;

%%

int main(int argc, char** argv)
{
  if (argc != 2)
  {
    cout << "Incorrect number of arguments!" << endl;
    return -1;
  }

  FILE *myfile = fopen(argv[1], "r");

  if (!myfile)
  {
    cout << "Failed to open a .zl file!" << endl;
    return -1;
  }

  yyin = myfile;

  yyparse();
}

void yyerror(const char *s)
{
  cout << "Parse Error: " << s << " on line " << linenum << endl;
  exit(-1);
}
