interpreter/parser/syntactical-analyser.output
Grammar

    0 $accept: zolon $end

    1 zolon: import
    2      | binding
    3      | expression

    4 import: "import" PATH

    5 binding: IDENTIFIER '=' expression

    6 expression: NUMBER
    7           | boolean
    8           | function
    9           | function-application
   10           | expression '+' expression
   11           | expression '-' expression
   12           | expression '*' expression
   13           | expression '/' expression
   14           | expression '>' expression
   15           | expression '<' expression
   16           | expression AND expression
   17           | expression OR expression
   18           | expression EQUALS expression
   19           | expression GEQUALS expression
   20           | expression LEQUALS expression
   21           | expression NEQUALS expression
   22           | "not" expression
   23           | '-' expression
   24           | expression '^' expression
   25           | '(' expression ')'

   26 boolean: "True"
   27        | "False"

   28 function: parameter-list "->" '{' function-body '}'

   29 function-body: expression
   30              | '|' subdomain-list expression

   31 subdomain-list: expression ':' expression '|'
   32               | subdomain-list expression ':' expression '|'

   33 parameter-list: parameter
   34               | parameter-list parameter

   35 parameter: '\\' IDENTIFIER

   36 function-application: IDENTIFIER '(' expression-list ')'
   37                     | IDENTIFIER

   38 expression-list: %empty
   39                | expression
   40                | expression-list ',' expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 25 36
')' (41) 25 36
'*' (42) 12
'+' (43) 10
',' (44) 40
'-' (45) 11 23
'/' (47) 13
':' (58) 31 32
'<' (60) 15
'=' (61) 5
'>' (62) 14
'\\' (92) 35
'^' (94) 24
'{' (123) 28
'|' (124) 30 31 32
'}' (125) 28
error (256)
NUMBER (258) 6
PATH (259) 4
IDENTIFIER (260) 5 35 36 37
"->" (261) 28
"True" (262) 26
"False" (263) 27
"import" (264) 4
AND (265) 16
OR (266) 17
EQUALS (267) 18
LEQUALS (268) 20
GEQUALS (269) 19
NEQUALS (270) 21
"not" (271) 22
NEG (272)


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
zolon (35)
    on left: 1 2 3, on right: 0
import (36)
    on left: 4, on right: 1
binding (37)
    on left: 5, on right: 2
expression (38)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25,
    on right: 3 5 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 29
    30 31 32 39 40
boolean (39)
    on left: 26 27, on right: 7
function (40)
    on left: 28, on right: 8
function-body (41)
    on left: 29 30, on right: 28
subdomain-list (42)
    on left: 31 32, on right: 30 32
parameter-list (43)
    on left: 33 34, on right: 28 34
parameter (44)
    on left: 35, on right: 33 34
function-application (45)
    on left: 36 37, on right: 9
expression-list (46)
    on left: 38 39 40, on right: 36 40


State 0

    0 $accept: . zolon $end

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "import"    shift, and go to state 5
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    zolon                 go to state 10
    import                go to state 11
    binding               go to state 12
    expression            go to state 13
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 1

    6 expression: NUMBER .

    $default  reduce using rule 6 (expression)


State 2

    5 binding: IDENTIFIER . '=' expression
   36 function-application: IDENTIFIER . '(' expression-list ')'
   37                     | IDENTIFIER .

    '='  shift, and go to state 19
    '('  shift, and go to state 20

    $default  reduce using rule 37 (function-application)


State 3

   26 boolean: "True" .

    $default  reduce using rule 26 (boolean)


State 4

   27 boolean: "False" .

    $default  reduce using rule 27 (boolean)


State 5

    4 import: "import" . PATH

    PATH  shift, and go to state 21


State 6

   22 expression: "not" . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 23
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 7

   23 expression: '-' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 24
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 8

   25 expression: '(' . expression ')'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 25
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 9

   35 parameter: '\\' . IDENTIFIER

    IDENTIFIER  shift, and go to state 26


State 10

    0 $accept: zolon . $end

    $end  shift, and go to state 27


State 11

    1 zolon: import .

    $default  reduce using rule 1 (zolon)


State 12

    2 zolon: binding .

    $default  reduce using rule 2 (zolon)


State 13

    3 zolon: expression .
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '>'      shift, and go to state 28
    '<'      shift, and go to state 29
    AND      shift, and go to state 30
    OR       shift, and go to state 31
    EQUALS   shift, and go to state 32
    LEQUALS  shift, and go to state 33
    GEQUALS  shift, and go to state 34
    NEQUALS  shift, and go to state 35
    '+'      shift, and go to state 36
    '-'      shift, and go to state 37
    '*'      shift, and go to state 38
    '/'      shift, and go to state 39
    '^'      shift, and go to state 40

    $default  reduce using rule 3 (zolon)


State 14

    7 expression: boolean .

    $default  reduce using rule 7 (expression)


State 15

    8 expression: function .

    $default  reduce using rule 8 (expression)


State 16

   28 function: parameter-list . "->" '{' function-body '}'
   34 parameter-list: parameter-list . parameter

    "->"  shift, and go to state 41
    '\\'  shift, and go to state 9

    parameter  go to state 42


State 17

   33 parameter-list: parameter .

    $default  reduce using rule 33 (parameter-list)


State 18

    9 expression: function-application .

    $default  reduce using rule 9 (expression)


State 19

    5 binding: IDENTIFIER '=' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 43
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 20

   36 function-application: IDENTIFIER '(' . expression-list ')'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    $default  reduce using rule 38 (expression-list)

    expression            go to state 44
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18
    expression-list       go to state 45


State 21

    4 import: "import" PATH .

    $default  reduce using rule 4 (import)


State 22

   36 function-application: IDENTIFIER . '(' expression-list ')'
   37                     | IDENTIFIER .

    '('  shift, and go to state 20

    $default  reduce using rule 37 (function-application)


State 23

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   22           | "not" expression .
   24           | expression . '^' expression

    '^'  shift, and go to state 40

    $default  reduce using rule 22 (expression)


State 24

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   23           | '-' expression .
   24           | expression . '^' expression

    '^'  shift, and go to state 40

    $default  reduce using rule 23 (expression)


State 25

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression
   25           | '(' expression . ')'

    '>'      shift, and go to state 28
    '<'      shift, and go to state 29
    AND      shift, and go to state 30
    OR       shift, and go to state 31
    EQUALS   shift, and go to state 32
    LEQUALS  shift, and go to state 33
    GEQUALS  shift, and go to state 34
    NEQUALS  shift, and go to state 35
    '+'      shift, and go to state 36
    '-'      shift, and go to state 37
    '*'      shift, and go to state 38
    '/'      shift, and go to state 39
    '^'      shift, and go to state 40
    ')'      shift, and go to state 46


State 26

   35 parameter: '\\' IDENTIFIER .

    $default  reduce using rule 35 (parameter)


State 27

    0 $accept: zolon $end .

    $default  accept


State 28

   14 expression: expression '>' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 47
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 29

   15 expression: expression '<' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 48
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 30

   16 expression: expression AND . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 49
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 31

   17 expression: expression OR . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 50
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 32

   18 expression: expression EQUALS . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 51
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 33

   20 expression: expression LEQUALS . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 52
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 34

   19 expression: expression GEQUALS . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 53
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 35

   21 expression: expression NEQUALS . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 54
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 36

   10 expression: expression '+' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 55
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 37

   11 expression: expression '-' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 56
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 38

   12 expression: expression '*' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 57
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 39

   13 expression: expression '/' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 58
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 40

   24 expression: expression '^' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 59
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 41

   28 function: parameter-list "->" . '{' function-body '}'

    '{'  shift, and go to state 60


State 42

   34 parameter-list: parameter-list parameter .

    $default  reduce using rule 34 (parameter-list)


State 43

    5 binding: IDENTIFIER '=' expression .
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '>'      shift, and go to state 28
    '<'      shift, and go to state 29
    AND      shift, and go to state 30
    OR       shift, and go to state 31
    EQUALS   shift, and go to state 32
    LEQUALS  shift, and go to state 33
    GEQUALS  shift, and go to state 34
    NEQUALS  shift, and go to state 35
    '+'      shift, and go to state 36
    '-'      shift, and go to state 37
    '*'      shift, and go to state 38
    '/'      shift, and go to state 39
    '^'      shift, and go to state 40

    $default  reduce using rule 5 (binding)


State 44

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression
   39 expression-list: expression .

    '>'      shift, and go to state 28
    '<'      shift, and go to state 29
    AND      shift, and go to state 30
    OR       shift, and go to state 31
    EQUALS   shift, and go to state 32
    LEQUALS  shift, and go to state 33
    GEQUALS  shift, and go to state 34
    NEQUALS  shift, and go to state 35
    '+'      shift, and go to state 36
    '-'      shift, and go to state 37
    '*'      shift, and go to state 38
    '/'      shift, and go to state 39
    '^'      shift, and go to state 40

    $default  reduce using rule 39 (expression-list)


State 45

   36 function-application: IDENTIFIER '(' expression-list . ')'
   40 expression-list: expression-list . ',' expression

    ')'  shift, and go to state 61
    ','  shift, and go to state 62


State 46

   25 expression: '(' expression ')' .

    $default  reduce using rule 25 (expression)


State 47

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   14           | expression '>' expression .
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    AND      shift, and go to state 30
    OR       shift, and go to state 31
    EQUALS   shift, and go to state 32
    LEQUALS  shift, and go to state 33
    GEQUALS  shift, and go to state 34
    NEQUALS  shift, and go to state 35
    '+'      shift, and go to state 36
    '-'      shift, and go to state 37
    '*'      shift, and go to state 38
    '/'      shift, and go to state 39
    '^'      shift, and go to state 40

    $default  reduce using rule 14 (expression)


State 48

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   15           | expression '<' expression .
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    AND      shift, and go to state 30
    OR       shift, and go to state 31
    EQUALS   shift, and go to state 32
    LEQUALS  shift, and go to state 33
    GEQUALS  shift, and go to state 34
    NEQUALS  shift, and go to state 35
    '+'      shift, and go to state 36
    '-'      shift, and go to state 37
    '*'      shift, and go to state 38
    '/'      shift, and go to state 39
    '^'      shift, and go to state 40

    $default  reduce using rule 15 (expression)


State 49

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   16           | expression AND expression .
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '^'  shift, and go to state 40

    $default  reduce using rule 16 (expression)


State 50

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   17           | expression OR expression .
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '^'  shift, and go to state 40

    $default  reduce using rule 17 (expression)


State 51

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   18           | expression EQUALS expression .
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '^'  shift, and go to state 40

    $default  reduce using rule 18 (expression)


State 52

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   20           | expression LEQUALS expression .
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '^'  shift, and go to state 40

    $default  reduce using rule 20 (expression)


State 53

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   19           | expression GEQUALS expression .
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '^'  shift, and go to state 40

    $default  reduce using rule 19 (expression)


State 54

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   21           | expression NEQUALS expression .
   24           | expression . '^' expression

    '+'  shift, and go to state 36
    '-'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '^'  shift, and go to state 40

    $default  reduce using rule 21 (expression)


State 55

   10 expression: expression . '+' expression
   10           | expression '+' expression .
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '^'  shift, and go to state 40

    $default  reduce using rule 10 (expression)


State 56

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   11           | expression '-' expression .
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    '^'  shift, and go to state 40

    $default  reduce using rule 11 (expression)


State 57

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   12           | expression '*' expression .
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '^'  shift, and go to state 40

    $default  reduce using rule 12 (expression)


State 58

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   13           | expression '/' expression .
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression

    '^'  shift, and go to state 40

    $default  reduce using rule 13 (expression)


State 59

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression
   24           | expression '^' expression .

    '^'  shift, and go to state 40

    $default  reduce using rule 24 (expression)


State 60

   28 function: parameter-list "->" '{' . function-body '}'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '|'         shift, and go to state 63
    '\\'        shift, and go to state 9

    expression            go to state 64
    boolean               go to state 14
    function              go to state 15
    function-body         go to state 65
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 61

   36 function-application: IDENTIFIER '(' expression-list ')' .

    $default  reduce using rule 36 (function-application)


State 62

   40 expression-list: expression-list ',' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 66
    boolean               go to state 14
    function              go to state 15
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 63

   30 function-body: '|' . subdomain-list expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 22
    "True"      shift, and go to state 3
    "False"     shift, and go to state 4
    "not"       shift, and go to state 6
    '-'         shift, and go to state 7
    '('         shift, and go to state 8
    '\\'        shift, and go to state 9

    expression            go to state 67
    boolean               go to state 14
    function              go to state 15
    subdomain-list        go to state 68
    parameter-list        go to state 16
    parameter             go to state 17
    function-application  go to state 18


State 64

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | expression . '>' expression
   15           | expression . '<' expression
   16           | expression . AND expression
   17           | expression . OR expression
   18           | expression . EQUALS expression
   19           | expression . GEQUALS expression
   20           | expression . LEQUALS expression
   21           | expression . NEQUALS expression
   24           | expression . '^' expression
   29 function-body: expression .

    '>'      shift, and go to state 28
    '<'      shift, and go to state 29
    AND      shift, and go to state 30
    OR       shift, and go to state 31
    EQUALS   shift, and go to state 32
    LEQUALS  shift, and go to state 33
    GEQUALS  shift, and go to state 34
    NEQUALS  shift, and go to state 35
    '+'      shift, and go to state 36
    '-'      shift, and go to state 37
    '*'      shift, and go to state 38
    '/'      shift, and go to state 39
    '^'      shift, and go to state 40

    $default  reduce using rule 29 (function-body)


State 65

   28 function: parameter-list "->" '{' function-body . '}'

    '}'  shift, and go to state 69


State 66
